Retrained vgg11 and vgg16

--- a/vgg19_evaluation_csv_imagewoof.ipynb
+++ b/vgg19_evaluation_csv_imagewoof.ipynb
@@ -6,11 +6,11 @@
    "id": "b90ba409-66ce-4eb2-96d2-b3c95502fa3f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T10:35:59.523139Z",
-     "iopub.status.busy": "2025-03-20T10:35:59.523016Z",
-     "iopub.status.idle": "2025-03-20T10:36:01.804752Z",
-     "shell.execute_reply": "2025-03-20T10:36:01.804192Z",
-     "shell.execute_reply.started": "2025-03-20T10:35:59.523122Z"
+     "iopub.execute_input": "2025-04-15T12:43:46.229497Z",
+     "iopub.status.busy": "2025-04-15T12:43:46.229266Z",
+     "iopub.status.idle": "2025-04-15T12:43:48.710157Z",
+     "shell.execute_reply": "2025-04-15T12:43:48.709590Z",
+     "shell.execute_reply.started": "2025-04-15T12:43:46.229480Z"
     }
    },
    "outputs": [],
@@ -26,6 +26,8 @@
     "\n",
     "# Import models\n",
     "from torchvision.models import vgg19, VGG19_Weights\n",
+    "from torchvision.models import vgg16, VGG16_Weights\n",
+    "from torchvision.models import vgg11, VGG11_Weights\n",
     "\n",
     "# Dataset\n",
     "from torchvision.datasets import Imagenette, ImageFolder\n",
@@ -41,11 +43,11 @@
    "id": "d13d2762-a36e-4e9e-8092-688c9519a0fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T10:36:01.806083Z",
-     "iopub.status.busy": "2025-03-20T10:36:01.805872Z",
-     "iopub.status.idle": "2025-03-20T10:36:01.985788Z",
-     "shell.execute_reply": "2025-03-20T10:36:01.985380Z",
-     "shell.execute_reply.started": "2025-03-20T10:36:01.806069Z"
+     "iopub.execute_input": "2025-04-15T12:43:48.711350Z",
+     "iopub.status.busy": "2025-04-15T12:43:48.711082Z",
+     "iopub.status.idle": "2025-04-15T12:43:48.892984Z",
+     "shell.execute_reply": "2025-04-15T12:43:48.892507Z",
+     "shell.execute_reply.started": "2025-04-15T12:43:48.711335Z"
     }
    },
    "outputs": [],
@@ -68,11 +70,11 @@
    "id": "71fbde3b-0160-4473-b2f2-8de2014bbd1e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T10:36:01.986445Z",
-     "iopub.status.busy": "2025-03-20T10:36:01.986302Z",
-     "iopub.status.idle": "2025-03-20T10:36:03.751561Z",
-     "shell.execute_reply": "2025-03-20T10:36:03.751015Z",
-     "shell.execute_reply.started": "2025-03-20T10:36:01.986431Z"
+     "iopub.execute_input": "2025-04-15T12:43:48.893778Z",
+     "iopub.status.busy": "2025-04-15T12:43:48.893591Z",
+     "iopub.status.idle": "2025-04-15T12:43:50.771564Z",
+     "shell.execute_reply": "2025-04-15T12:43:50.771124Z",
+     "shell.execute_reply.started": "2025-04-15T12:43:48.893764Z"
     }
    },
    "outputs": [
@@ -97,27 +99,21 @@
        "    (13): ReLU(inplace=True)\n",
        "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (15): ReLU(inplace=True)\n",
-       "    (16): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (17): ReLU(inplace=True)\n",
-       "    (18): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (19): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (18): ReLU(inplace=True)\n",
+       "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (20): ReLU(inplace=True)\n",
        "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (22): ReLU(inplace=True)\n",
-       "    (23): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (24): ReLU(inplace=True)\n",
-       "    (25): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (26): ReLU(inplace=True)\n",
-       "    (27): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (25): ReLU(inplace=True)\n",
+       "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (27): ReLU(inplace=True)\n",
        "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (29): ReLU(inplace=True)\n",
-       "    (30): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (31): ReLU(inplace=True)\n",
-       "    (32): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (33): ReLU(inplace=True)\n",
-       "    (34): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (35): ReLU(inplace=True)\n",
-       "    (36): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
        "  )\n",
        "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
        "  (classifier): Sequential(\n",
@@ -139,8 +135,13 @@
    ],
    "source": [
     "# Retrained model\n",
-    "PATH = 'vgg19_imagewoof.pth'\n",
-    "model = vgg19()\n",
+    "# PATH = 'vgg19_imagewoof.pth'\n",
+    "# model = vgg19()\n",
+    "# PATH = \"vgg16_Imagewoof.pth\"\n",
+    "# model = vgg16()\n",
+    "PATH = \"vgg11_Imagewoof.pth\"\n",
+    "model = vgg11()\n",
+    "\n",
     "model.classifier[6] = torch.nn.Linear(in_features=4096, out_features=10)\n",
     "model.load_state_dict(torch.load(PATH, weights_only=True))\n",
     "model = model.to(device)\n",
@@ -153,11 +154,11 @@
    "id": "3b0ef80b-8123-489d-ab7c-ea00b2e801da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T10:36:03.752553Z",
-     "iopub.status.busy": "2025-03-20T10:36:03.752292Z",
-     "iopub.status.idle": "2025-03-20T10:37:01.648549Z",
-     "shell.execute_reply": "2025-03-20T10:37:01.648043Z",
-     "shell.execute_reply.started": "2025-03-20T10:36:03.752518Z"
+     "iopub.execute_input": "2025-04-15T12:43:50.772278Z",
+     "iopub.status.busy": "2025-04-15T12:43:50.772075Z",
+     "iopub.status.idle": "2025-04-15T12:44:41.576667Z",
+     "shell.execute_reply": "2025-04-15T12:44:41.576269Z",
+     "shell.execute_reply.started": "2025-04-15T12:43:50.772263Z"
     }
    },
    "outputs": [
@@ -165,7 +166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|███████████████████████| 3929/3929 [00:57<00:00, 67.89images/s]\n"
+      "Evaluating: 100%|███████████████████████| 3929/3929 [00:50<00:00, 77.37images/s]\n"
      ]
     }
    ],
@@ -213,7 +214,9 @@
     "dict = {'image': img_path, 'true label': true_label, 'predicted label': predicted_label,\n",
     "        'confidence score': confidence, 'true confidence score': true_confidence, 'correct': correctness}\n",
     "df = pd.DataFrame(dict)\n",
-    "df.to_csv('vgg19_results_retrained_imagewoof.csv')"
+    "# df.to_csv('vgg19_results_retrained_imagewoof.csv')\n",
+    "# df.to_csv('vgg16_results_retrained_imagewoof.csv')\n",
+    "df.to_csv('vgg11_results_retrained_imagewoof.csv')"
    ]
   },
   {
@@ -222,11 +225,11 @@
    "id": "9e088edc-adbe-49ff-8456-97aa61ec8d6d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T10:37:01.651026Z",
-     "iopub.status.busy": "2025-03-20T10:37:01.650878Z",
-     "iopub.status.idle": "2025-03-20T10:37:01.656535Z",
-     "shell.execute_reply": "2025-03-20T10:37:01.656008Z",
-     "shell.execute_reply.started": "2025-03-20T10:37:01.651010Z"
+     "iopub.execute_input": "2025-04-15T12:44:41.577338Z",
+     "iopub.status.busy": "2025-04-15T12:44:41.577182Z",
+     "iopub.status.idle": "2025-04-15T12:44:41.582582Z",
+     "shell.execute_reply": "2025-04-15T12:44:41.582112Z",
+     "shell.execute_reply.started": "2025-04-15T12:44:41.577321Z"
     }
    },
    "outputs": [
@@ -234,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation accuracy:  0.9056\n"
+      "Evaluation accuracy:  0.8962\n"
      ]
     }
    ],
