--- a/vgg19_retrain_imagewoof.ipynb
+++ b/vgg19_retrain_imagewoof.ipynb
@@ -6,11 +6,11 @@
    "id": "d59bb5c6-f89d-47c6-a385-c83434b25062",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-19T14:25:24.353619Z",
-     "iopub.status.busy": "2025-03-19T14:25:24.353437Z",
-     "iopub.status.idle": "2025-03-19T14:25:27.467519Z",
-     "shell.execute_reply": "2025-03-19T14:25:27.466969Z",
-     "shell.execute_reply.started": "2025-03-19T14:25:24.353604Z"
+     "iopub.execute_input": "2025-04-15T13:30:40.883955Z",
+     "iopub.status.busy": "2025-04-15T13:30:40.883808Z",
+     "iopub.status.idle": "2025-04-15T13:30:43.598791Z",
+     "shell.execute_reply": "2025-04-15T13:30:43.598223Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:40.883938Z"
     }
    },
    "outputs": [],
@@ -26,6 +26,9 @@
     "\n",
     "# Import models\n",
     "from torchvision.models import vgg19, VGG19_Weights\n",
+    "from torchvision.models import vgg16, VGG16_Weights\n",
+    "from torchvision.models import vgg11, VGG11_Weights\n",
+    "\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
@@ -40,15 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5094b953-3a01-4074-86b1-1d6e6cef3e63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-19T14:26:18.825725Z",
-     "iopub.status.busy": "2025-03-19T14:26:18.825524Z",
-     "iopub.status.idle": "2025-03-19T14:26:18.860129Z",
-     "shell.execute_reply": "2025-03-19T14:26:18.859781Z",
-     "shell.execute_reply.started": "2025-03-19T14:26:18.825710Z"
+     "iopub.execute_input": "2025-04-15T13:30:43.600118Z",
+     "iopub.status.busy": "2025-04-15T13:30:43.599812Z",
+     "iopub.status.idle": "2025-04-15T13:30:43.748143Z",
+     "shell.execute_reply": "2025-04-15T13:30:43.747586Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:43.600102Z"
     }
    },
    "outputs": [],
@@ -74,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "43d66d70-8839-48b0-a045-cd2ff56aea18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-19T14:26:31.272952Z",
-     "iopub.status.busy": "2025-03-19T14:26:31.272710Z",
-     "iopub.status.idle": "2025-03-19T14:26:31.276062Z",
-     "shell.execute_reply": "2025-03-19T14:26:31.275566Z",
-     "shell.execute_reply.started": "2025-03-19T14:26:31.272938Z"
+     "iopub.execute_input": "2025-04-15T13:30:43.748842Z",
+     "iopub.status.busy": "2025-04-15T13:30:43.748689Z",
+     "iopub.status.idle": "2025-04-15T13:30:43.751300Z",
+     "shell.execute_reply": "2025-04-15T13:30:43.750926Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:43.748826Z"
     }
    },
    "outputs": [
@@ -102,39 +105,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1a1aceec-a5e1-48b1-ace5-9fec51db1f23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-19T14:26:38.652454Z",
-     "iopub.status.busy": "2025-03-19T14:26:38.652252Z",
-     "iopub.status.idle": "2025-03-19T14:26:40.033562Z",
-     "shell.execute_reply": "2025-03-19T14:26:40.033017Z",
-     "shell.execute_reply.started": "2025-03-19T14:26:38.652441Z"
+     "iopub.execute_input": "2025-04-15T13:30:43.752004Z",
+     "iopub.status.busy": "2025-04-15T13:30:43.751836Z",
+     "iopub.status.idle": "2025-04-15T13:30:45.142089Z",
+     "shell.execute_reply": "2025-04-15T13:30:45.141459Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:43.751989Z"
     }
    },
    "outputs": [],
    "source": [
-    "model = vgg19(weights=VGG19_Weights.DEFAULT).to(device)\n",
+    "model_vgg19 = vgg19(weights=VGG19_Weights.DEFAULT).to(device)\n",
+    "# model_vgg11 = vgg11(weights=VGG11_Weights.DEFAULT).to(device)\n",
+    "# model_vgg16 = vgg16(weights=VGG16_Weights.DEFAULT).to(device)\n",
     "\n",
     "# Limit the last output features to 10\n",
-    "model.classifier[6] = nn.Linear(in_features=4096, out_features=num_classes)\n",
+    "model_vgg19.classifier[6] = nn.Linear(in_features=4096, out_features=num_classes)\n",
+    "# model_vgg11.classifier[6] = nn.Linear(in_features=4096, out_features=num_classes)\n",
+    "# model_vgg16.classifier[6] = nn.Linear(in_features=4096, out_features=num_classes)\n",
     "\n",
     "# Move to device\n",
-    "model = model.to(device)"
+    "model_vgg19 = model_vgg19.to(device)\n",
+    "# model_vgg11 = model_vgg11.to(device)\n",
+    "# model_vgg16 = model_vgg16.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "516bc122-c7db-461e-8a00-811b65c78df9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-19T14:26:44.388363Z",
-     "iopub.status.busy": "2025-03-19T14:26:44.388129Z",
-     "iopub.status.idle": "2025-03-19T14:26:44.391573Z",
-     "shell.execute_reply": "2025-03-19T14:26:44.390942Z",
-     "shell.execute_reply.started": "2025-03-19T14:26:44.388350Z"
+     "iopub.execute_input": "2025-04-15T13:30:45.142754Z",
+     "iopub.status.busy": "2025-04-15T13:30:45.142609Z",
+     "iopub.status.idle": "2025-04-15T13:30:45.145570Z",
+     "shell.execute_reply": "2025-04-15T13:30:45.145074Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:45.142739Z"
     }
    },
    "outputs": [],
@@ -143,20 +152,125 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "# Optimizer (fine-tuning the whole network)\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4)"
+    "# optimizer_vgg16 = optim.Adam(model_vgg16.parameters(), lr=1e-4)\n",
+    "# optimizer_vgg11 = optim.Adam(model_vgg11.parameters(), lr=1e-4)\n",
+    "optimizer_vgg19 = optim.Adam(model_vgg19.parameters(), lr=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "838028ae-d66d-47b0-b7d5-f94f6117a361",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-04-15T13:30:45.146170Z",
+     "iopub.status.busy": "2025-04-15T13:30:45.146028Z",
+     "iopub.status.idle": "2025-04-15T13:30:45.158314Z",
+     "shell.execute_reply": "2025-04-15T13:30:45.157916Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:45.146155Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "num_epochs = 10  # Adjust as needed\n",
+    "\n",
+    "def train_model(model, train_loader, criterion, optimizer):\n",
+    "    for epoch in range(num_epochs):\n",
+    "        model.train()\n",
+    "        running_loss = 0.0\n",
+    "        correct, total = 0, 0\n",
+    "    \n",
+    "        loop = tqdm(train_loader, leave=True)\n",
+    "        for images, labels in loop:\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
+    "    \n",
+    "            # Forward pass\n",
+    "            outputs = model(images)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "    \n",
+    "            # Backward pass\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "    \n",
+    "            # Compute accuracy\n",
+    "            _, preds = torch.max(outputs, 1)\n",
+    "            correct += (preds == labels).sum().item()\n",
+    "            total += labels.size(0)\n",
+    "    \n",
+    "            running_loss += loss.item()\n",
+    "            loop.set_description(f\"Epoch [{epoch+1}/{num_epochs}]\")\n",
+    "            loop.set_postfix(loss=running_loss/len(train_loader), acc=100 * correct / total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ff8f8d6d-bbb0-4875-9ba0-27c9c133fdae",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-04-15T13:30:45.159817Z",
+     "iopub.status.busy": "2025-04-15T13:30:45.159525Z",
+     "iopub.status.idle": "2025-04-15T13:30:45.161996Z",
+     "shell.execute_reply": "2025-04-15T13:30:45.161553Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:45.159800Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def save_model(model, PATH):\n",
+    "    torch.save(model.state_dict(), PATH)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "838028ae-d66d-47b0-b7d5-f94f6117a361",
+   "id": "796d5869-25b4-41dc-b7fa-4eb789e906d2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-19T14:27:11.673427Z",
-     "iopub.status.busy": "2025-03-19T14:27:11.673144Z",
-     "iopub.status.idle": "2025-03-19T14:53:27.917551Z",
-     "shell.execute_reply": "2025-03-19T14:53:27.916938Z",
-     "shell.execute_reply.started": "2025-03-19T14:27:11.673401Z"
+     "iopub.execute_input": "2025-04-15T13:30:45.162700Z",
+     "iopub.status.busy": "2025-04-15T13:30:45.162516Z",
+     "iopub.status.idle": "2025-04-15T13:30:45.165026Z",
+     "shell.execute_reply": "2025-04-15T13:30:45.164492Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:45.162683Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# train_model(model_vgg11, train_loader, criterion, optimizer_vgg11)\n",
+    "# save_model(model_vgg11, \"vgg11_Imagewoof.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c77beb26-2683-4fa6-8ccf-a5c2f84d140e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-04-15T13:30:45.166383Z",
+     "iopub.status.busy": "2025-04-15T13:30:45.166038Z",
+     "iopub.status.idle": "2025-04-15T13:30:45.169030Z",
+     "shell.execute_reply": "2025-04-15T13:30:45.168555Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:45.166355Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# train_model(model_vgg16, train_loader, criterion, optimizer_vgg16)\n",
+    "# save_model(model_vgg16, \"vgg16_Imagewoof.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ba502d2a-804d-45c4-853e-30be9b081656",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-04-15T13:30:45.169925Z",
+     "iopub.status.busy": "2025-04-15T13:30:45.169647Z",
+     "iopub.status.idle": "2025-04-15T13:57:25.604858Z",
+     "shell.execute_reply": "2025-04-15T13:57:25.604366Z",
+     "shell.execute_reply.started": "2025-04-15T13:30:45.169906Z"
     }
    },
    "outputs": [
@@ -164,76 +278,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10]: 100%|█████| 283/283 [02:30<00:00,  1.89it/s, acc=84.5, loss=0.483]\n",
-      "Epoch [2/10]: 100%|█████| 283/283 [02:32<00:00,  1.85it/s, acc=92.1, loss=0.246]\n",
-      "Epoch [3/10]: 100%|██████| 283/283 [02:34<00:00,  1.83it/s, acc=94.4, loss=0.17]\n",
-      "Epoch [4/10]: 100%|█████| 283/283 [02:36<00:00,  1.81it/s, acc=95.4, loss=0.145]\n",
-      "Epoch [5/10]: 100%|█████| 283/283 [02:38<00:00,  1.79it/s, acc=96.6, loss=0.108]\n",
-      "Epoch [6/10]: 100%|████| 283/283 [02:39<00:00,  1.77it/s, acc=96.9, loss=0.0976]\n",
-      "Epoch [7/10]: 100%|█████| 283/283 [02:40<00:00,  1.77it/s, acc=96.9, loss=0.101]\n",
-      "Epoch [8/10]: 100%|████| 283/283 [02:41<00:00,  1.75it/s, acc=97.2, loss=0.0872]\n",
-      "Epoch [9/10]: 100%|█████| 283/283 [02:41<00:00,  1.75it/s, acc=98.2, loss=0.061]\n",
-      "Epoch [10/10]: 100%|███| 283/283 [02:40<00:00,  1.76it/s, acc=98.4, loss=0.0539]\n"
+      "Epoch [1/10]: 100%|█████| 283/283 [02:37<00:00,  1.80it/s, acc=84.5, loss=0.487]\n",
+      "Epoch [2/10]: 100%|█████| 283/283 [02:38<00:00,  1.79it/s, acc=91.3, loss=0.273]\n",
+      "Epoch [3/10]: 100%|█████| 283/283 [02:40<00:00,  1.76it/s, acc=93.6, loss=0.193]\n",
+      "Epoch [4/10]: 100%|███████| 283/283 [02:41<00:00,  1.75it/s, acc=96, loss=0.129]\n",
+      "Epoch [5/10]: 100%|█████| 283/283 [02:40<00:00,  1.76it/s, acc=96.8, loss=0.102]\n",
+      "Epoch [6/10]: 100%|████| 283/283 [02:40<00:00,  1.76it/s, acc=96.8, loss=0.0957]\n",
+      "Epoch [7/10]: 100%|████| 283/283 [02:38<00:00,  1.78it/s, acc=97.5, loss=0.0755]\n",
+      "Epoch [8/10]: 100%|██████| 283/283 [02:41<00:00,  1.75it/s, acc=98, loss=0.0666]\n",
+      "Epoch [9/10]: 100%|████| 283/283 [02:39<00:00,  1.77it/s, acc=97.3, loss=0.0843]\n",
+      "Epoch [10/10]: 100%|███| 283/283 [02:40<00:00,  1.76it/s, acc=97.7, loss=0.0664]\n"
      ]
     }
    ],
    "source": [
-    "num_epochs = 10  # Adjust as needed\n",
-    "\n",
-    "for epoch in range(num_epochs):\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "    correct, total = 0, 0\n",
-    "\n",
-    "    loop = tqdm(train_loader, leave=True)\n",
-    "    for images, labels in loop:\n",
-    "        images, labels = images.to(device), labels.to(device)\n",
-    "\n",
-    "        # Forward pass\n",
-    "        outputs = model(images)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "\n",
-    "        # Backward pass\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        # Compute accuracy\n",
-    "        _, preds = torch.max(outputs, 1)\n",
-    "        correct += (preds == labels).sum().item()\n",
-    "        total += labels.size(0)\n",
-    "\n",
-    "        running_loss += loss.item()\n",
-    "        loop.set_description(f\"Epoch [{epoch+1}/{num_epochs}]\")\n",
-    "        loop.set_postfix(loss=running_loss/len(train_loader), acc=100 * correct / total)"
+    "train_model(model_vgg19, train_loader, criterion, optimizer_vgg19)\n",
+    "# save_model(model_vgg19, \"vgg19_Imagewoof.pth\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ff8f8d6d-bbb0-4875-9ba0-27c9c133fdae",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-03-19T14:53:27.918700Z",
-     "iopub.status.busy": "2025-03-19T14:53:27.918468Z",
-     "iopub.status.idle": "2025-03-19T14:53:28.570475Z",
-     "shell.execute_reply": "2025-03-19T14:53:28.569840Z",
-     "shell.execute_reply.started": "2025-03-19T14:53:27.918681Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "PATH = 'vgg19_imagewoof.pth'\n",
-    "torch.save(model.state_dict(), PATH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "796d5869-25b4-41dc-b7fa-4eb789e906d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
