Remove vgg11 vgg16

--- a/vgg19_evaluation_csv_imagenette.ipynb
+++ b/vgg19_evaluation_csv_imagenette.ipynb
@@ -59,7 +59,10 @@
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])  # Same normalization as ImageNet\n",
     "])\n",
     "imagenette_data = ImageFolder(root='/home/yi/Downloads/imagenette2/val', transform=transform)\n",
-    "data_loader = torch.utils.data.DataLoader(imagenette_data, batch_size=1, shuffle=False)"
+    "data_loader = torch.utils.data.DataLoader(imagenette_data, batch_size=1, shuffle=False)\n",
+    "\n",
+    "custom_data = ImageFolder(root=\"./input\", transform=transform)\n",
+    "custom_data_loader = torch.utils.data.DataLoader(custom_data, batch_size=1, shuffle=False)"
    ]
   },
   {
@@ -211,19 +214,19 @@
    ],
    "source": [
     "# Pre-trained model\n",
-    "'''\n",
     "weights = VGG19_Weights.DEFAULT\n",
     "model = vgg19(weights=weights).to(device)\n",
     "model.eval()\n",
-    "'''\n",
     "\n",
     "# Retrained model\n",
+    "'''\n",
     "PATH = 'vgg19_imagenette.pth'\n",
     "model = vgg19()\n",
     "model.classifier[6] = torch.nn.Linear(in_features=4096, out_features=10)\n",
     "model.load_state_dict(torch.load(PATH, weights_only=True))\n",
     "model = model.to(device)\n",
-    "model.eval()"
+    "model.eval()\n",
+    "'''"
    ]
   },
   {
@@ -249,50 +252,52 @@
     }
    ],
    "source": [
-    "img_path = []\n",
-    "true_label = []\n",
-    "predicted_label = []\n",
-    "confidence = []\n",
-    "true_confidence = []\n",
-    "correctness = []\n",
-    "\n",
-    "image_paths = [data_loader.dataset.samples[i][0] for i in range(len(data_loader.dataset))]\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    for idx, (img, label) in enumerate(tqdm(data_loader, desc=\"Evaluating\", unit=\"images\")):\n",
-    "        # Retrieve image\n",
-    "        img = img.to(device)\n",
-    "        label = label.to(device)\n",
-    "        \n",
-    "        # Prediction\n",
-    "        prediction = model(img).squeeze(0).softmax(0)\n",
-    "        class_id = prediction.argmax().item()\n",
-    "        score = prediction[class_id].item()\n",
-    "        true_score = prediction[label_rewire[label.item()]].item()\n",
-    "        \n",
-    "        # Correct?\n",
-    "        #category_name = weights.meta[\"categories\"][class_id]\n",
-    "        \n",
-    "        # Extract class names from the dataset\n",
-    "        id_to_class = {v: k for k, v in imagenette_data.class_to_idx.items()}  # Reverse mapping\n",
-    "        # Get predicted category name\n",
-    "        category_name = pred_to_class[class_id]\n",
-    "        # Check if prediction is correct\n",
-    "        correct = 'y' if category_name == id_to_class[label.item()] else 'n'\n",
-    "        \n",
-    "        # Log\n",
-    "        img_path.append(image_paths[idx])\n",
-    "        true_label.append(id_to_class[label.item()])\n",
-    "        predicted_label.append(category_name)\n",
-    "        confidence.append(score)\n",
-    "        true_confidence.append(true_score)\n",
-    "        correctness.append(correct)\n",
-    "\n",
-    "# Dictionary of logs\n",
-    "dict = {'image': img_path, 'true label': true_label, 'predicted label': predicted_label,\n",
-    "        'confidence score': confidence, 'true confidence score': true_confidence, 'correct': correctness}\n",
-    "df = pd.DataFrame(dict)\n",
-    "df.to_csv('vgg19_results_retrained_imagenette.csv')"
+    "# Evaluation (output to csv)\n",
+    "def evaluate(data_loader, PATH):\n",
+    "    img_path = []\n",
+    "    true_label = []\n",
+    "    predicted_label = []\n",
+    "    confidence = []\n",
+    "    true_confidence = []\n",
+    "    correctness = []\n",
+    "    \n",
+    "    image_paths = [data_loader.dataset.samples[i][0] for i in range(len(data_loader.dataset))]\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for idx, (img, label) in enumerate(tqdm(data_loader, desc=\"Evaluating\", unit=\"images\")):\n",
+    "            # Retrieve image\n",
+    "            img = img.to(device)\n",
+    "            label = label.to(device)\n",
+    "            \n",
+    "            # Prediction\n",
+    "            prediction = model(img).squeeze(0).softmax(0)\n",
+    "            class_id = prediction.argmax().item()\n",
+    "            score = prediction[class_id].item()\n",
+    "            true_score = prediction[label_rewire[label.item()]].item()\n",
+    "            \n",
+    "            # Correct?\n",
+    "            #category_name = weights.meta[\"categories\"][class_id]\n",
+    "            \n",
+    "            # Extract class names from the dataset\n",
+    "            id_to_class = {v: k for k, v in imagenette_data.class_to_idx.items()}  # Reverse mapping\n",
+    "            # Get predicted category name\n",
+    "            category_name = pred_to_class[class_id]\n",
+    "            # Check if prediction is correct\n",
+    "            correct = 'y' if category_name == id_to_class[label.item()] else 'n'\n",
+    "            \n",
+    "            # Log\n",
+    "            img_path.append(image_paths[idx])\n",
+    "            true_label.append(id_to_class[label.item()])\n",
+    "            predicted_label.append(category_name)\n",
+    "            confidence.append(score)\n",
+    "            true_confidence.append(true_score)\n",
+    "            correctness.append(correct)\n",
+    "    \n",
+    "    # Dictionary of logs\n",
+    "    dict = {'image': img_path, 'true label': true_label, 'predicted label': predicted_label,\n",
+    "            'confidence score': confidence, 'true confidence score': true_confidence, 'correct': correctness}\n",
+    "    df = pd.DataFrame(dict)\n",
+    "    df.to_csv(PATH)"
    ]
   },
   {
@@ -320,7 +325,7 @@
    ],
    "source": [
     "# Print evaluation accuracy\n",
-    "print('Evaluation accuracy: ', round(len(df[df['correct'] == 'y']) / len(df), 4))"
+    "# print('Evaluation accuracy: ', round(len(df[df['correct'] == 'y']) / len(df), 4))"
    ]
   }
  ],
