--- a/vgg19_evaluation_csv_imagenette.ipynb
+++ b/vgg19_evaluation_csv_imagenette.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7337d7e5-50ec-4865-bd2d-c050f7d6f6c1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-03-20T10:37:40.607130Z",
-     "iopub.status.busy": "2025-03-20T10:37:40.606884Z",
-     "iopub.status.idle": "2025-03-20T10:37:43.088600Z",
-     "shell.execute_reply": "2025-03-20T10:37:43.088038Z",
-     "shell.execute_reply.started": "2025-03-20T10:37:40.607116Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -37,17 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2d2ff702-3cde-46a9-946a-f5409e1afafd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-03-20T10:37:43.089914Z",
-     "iopub.status.busy": "2025-03-20T10:37:43.089681Z",
-     "iopub.status.idle": "2025-03-20T10:37:43.204393Z",
-     "shell.execute_reply": "2025-03-20T10:37:43.203860Z",
-     "shell.execute_reply.started": "2025-03-20T10:37:43.089900Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -59,25 +43,14 @@
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])  # Same normalization as ImageNet\n",
     "])\n",
     "imagenette_data = ImageFolder(root='/home/yi/Downloads/imagenette2/val', transform=transform)\n",
-    "data_loader = torch.utils.data.DataLoader(imagenette_data, batch_size=1, shuffle=False)\n",
-    "\n",
-    "custom_data = ImageFolder(root=\"./input\", transform=transform)\n",
-    "custom_data_loader = torch.utils.data.DataLoader(custom_data, batch_size=1, shuffle=False)"
+    "data_loader = torch.utils.data.DataLoader(imagenette_data, batch_size=1, shuffle=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b81d9c16-7dc4-4c7f-b706-0bedf1f10603",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-03-20T10:37:43.205113Z",
-     "iopub.status.busy": "2025-03-20T10:37:43.204949Z",
-     "iopub.status.idle": "2025-03-20T10:37:43.208906Z",
-     "shell.execute_reply": "2025-03-20T10:37:43.208441Z",
-     "shell.execute_reply.started": "2025-03-20T10:37:43.205098Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# For pre-trained model\n",
@@ -139,79 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1b057cf5-ae81-4adf-a96f-96210a38c079",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-03-20T10:37:43.210055Z",
-     "iopub.status.busy": "2025-03-20T10:37:43.209906Z",
-     "iopub.status.idle": "2025-03-20T10:37:45.116175Z",
-     "shell.execute_reply": "2025-03-20T10:37:45.115414Z",
-     "shell.execute_reply.started": "2025-03-20T10:37:43.210041Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "VGG(\n",
-       "  (features): Sequential(\n",
-       "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (1): ReLU(inplace=True)\n",
-       "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (3): ReLU(inplace=True)\n",
-       "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (6): ReLU(inplace=True)\n",
-       "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (8): ReLU(inplace=True)\n",
-       "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (11): ReLU(inplace=True)\n",
-       "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (13): ReLU(inplace=True)\n",
-       "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (15): ReLU(inplace=True)\n",
-       "    (16): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (17): ReLU(inplace=True)\n",
-       "    (18): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (19): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (20): ReLU(inplace=True)\n",
-       "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (22): ReLU(inplace=True)\n",
-       "    (23): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (24): ReLU(inplace=True)\n",
-       "    (25): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (26): ReLU(inplace=True)\n",
-       "    (27): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (29): ReLU(inplace=True)\n",
-       "    (30): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (31): ReLU(inplace=True)\n",
-       "    (32): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (33): ReLU(inplace=True)\n",
-       "    (34): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (35): ReLU(inplace=True)\n",
-       "    (36): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "  )\n",
-       "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
-       "  (classifier): Sequential(\n",
-       "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
-       "    (1): ReLU(inplace=True)\n",
-       "    (2): Dropout(p=0.5, inplace=False)\n",
-       "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
-       "    (4): ReLU(inplace=True)\n",
-       "    (5): Dropout(p=0.5, inplace=False)\n",
-       "    (6): Linear(in_features=4096, out_features=10, bias=True)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Pre-trained model\n",
     "weights = VGG19_Weights.DEFAULT\n",
@@ -231,26 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0f62d333-1eb4-452d-acd8-b4bd9f0b1548",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-03-20T10:37:45.116963Z",
-     "iopub.status.busy": "2025-03-20T10:37:45.116790Z",
-     "iopub.status.idle": "2025-03-20T10:38:48.030501Z",
-     "shell.execute_reply": "2025-03-20T10:38:48.029940Z",
-     "shell.execute_reply.started": "2025-03-20T10:37:45.116949Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Evaluating: 100%|███████████████████████| 3925/3925 [01:02<00:00, 62.42images/s]\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Evaluation (output to csv)\n",
     "def evaluate(data_loader, PATH):\n",
@@ -302,30 +190,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "09881061-9f11-418b-8909-c1401a8b4967",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-03-20T10:38:48.031447Z",
-     "iopub.status.busy": "2025-03-20T10:38:48.031230Z",
-     "iopub.status.idle": "2025-03-20T10:38:48.036926Z",
-     "shell.execute_reply": "2025-03-20T10:38:48.036302Z",
-     "shell.execute_reply.started": "2025-03-20T10:38:48.031425Z"
-    },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluation accuracy:  0.9401\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print evaluation accuracy\n",
-    "# print('Evaluation accuracy: ', round(len(df[df['correct'] == 'y']) / len(df), 4))"
+    "print('Evaluation accuracy: ', round(len(df[df['correct'] == 'y']) / len(df), 4))"
    ]
   }
  ],
